--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -12,6 +12,7 @@
         <ul id="messages"></ul>
         This is Chat Room!
         <form id="chatbox">
+            {{.UserData.name}}:<br/>
             <textarea></textarea>
             <input type="submit" value="送信" />
         </form>
@@ -29,7 +30,7 @@
                         alert("エラー：WebSocket通信が行われていません");
                         return false;
                     }
-                    socket.send(msgBox.val());
+                    socket.send(JSON.stringify({"Message": msgBox.val()}));
                     msgBox.val("");
                     return false;
                 });
@@ -41,7 +42,13 @@
                         alert("接続が終了しました");
                     }
                     socket.onmessage = function(e){
-                        messages.append($("<li>").text(e.data));
+                        var msg = eval("("+e.data+")");
+                        messages.append(
+                            $("<li>").append(
+                                $("<strong>").text(msg.Name + ":  "),
+                                $("<span>").text(msg.Message)
+                            )
+                        );
                     }
                 }
             });
